hphp/hack/test/typecheck/unassigned_tconst.php
<?hh

class C {
  const type asd;;
}
